--- a/index.html
+++ b/index.html
@@ -220,72 +220,74 @@
     Contains: KMCEI Productions + "Etching..." + Team Cards
   ====================================================== -->
 <section id="bottom" class="bottom-band">
-  <div class="bottom-inner reveal">
+  <div class="bottom-inner">
 
-<!-- =========================
-     PRODUCTION TITLE STACK
-========================= -->
-<div class="production-title">
-  <span class="production-bg">PRODUCTIONS</span>
-  <h2 class="production-fg">KMCEI</h2>
-</div>
+    <!-- PRODUCTION TITLE (PART 1) -->
+    <div class="production-title">
+      <span class="production-bg">PRODUCTIONS</span>
+      <h2 class="production-fg">KMCEI</h2>
+    </div>
 
-<p class="production-tagline">
-  Etching our hearts and minds into the digital ether.
-</p>
+    <p class="production-tagline">
+      Etching our hearts and minds into the digital ether.
+    </p>
 
+    <!-- CORE TEAM -->
+    <h3 class="bottom-subhead">Core Team</h3>
 
-    <!-- ===== TEAM GRID ===== -->
-    <div class="team-showcase">
+    <!-- 👇 PART 2 GOES HERE 👇 -->
+    <div class="team-grid">
 
-      <!-- MEMBER -->
-      <article class="team-profile">
-        <img src="images/gallery/gallery1.jpg" alt="Luvelre N. portrait">
+      <article class="team-member">
+        <img src="images/team/luvelre.jpg" alt="Luvelre N.">
         <h4>Luvelre N.</h4>
-        <p>Narrative Designer & Lead Scriptwriter</p>
+        <p class="team-role">Narrative Designer & Lead Scriptwriter</p>
 
         <div class="team-links">
-          <a href="#">X</a>
-          <a href="#">Portfolio</a>
+          <a href="https://x.com/USERNAME" target="_blank">X</a>
+          <a href="https://yourportfolio.com" target="_blank">Portfolio</a>
         </div>
       </article>
 
-      <article class="team-profile">
-        <img src="images/gallery/gallery1.jpg" alt="Milo G. portrait">
+      <article class="team-member">
+        <img src="images/team/milo.jpg" alt="Milo G.">
         <h4>Milo G.</h4>
-        <p>Lead Visual Artist & Animation Director</p>
+        <p class="team-role">Lead Visual Artist & Animation Director</p>
 
         <div class="team-links">
-          <a href="#">Instagram</a>
-          <a href="#">Art</a>
+          <a href="https://instagram.com/USERNAME" target="_blank">Instagram</a>
+          <a href="#" target="_blank">Art</a>
         </div>
       </article>
 
-      <article class="team-profile">
-        <img src="images/gallery/gallery1.jpg" alt="Kevin N. portrait">
+      <article class="team-member">
+        <img src="images/team/kevin.jpg" alt="Kevin N.">
         <h4>Kevin N.</h4>
-        <p>Lead Technical Designer & Full-Stack Developer</p>
+        <p class="team-role">Lead Technical Designer & Full-Stack Developer</p>
 
         <div class="team-links">
-          <a href="#">GitHub</a>
-          <a href="#">LinkedIn</a>
+          <a href="https://github.com/USERNAME" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/USERNAME" target="_blank">LinkedIn</a>
         </div>
       </article>
 
-      <article class="team-profile">
-        <img src="images/gallery/gallery1.jpg" alt="KonneAqua portrait">
+      <article class="team-member">
+        <img src="images/team/konne.jpg" alt="KonneAqua">
         <h4>KonneAqua</h4>
-        <p>Audio Director & Lead Composer</p>
+        <p class="team-role">Audio Director & Lead Composer</p>
 
         <div class="team-links">
-          <a href="#">YouTube</a>
-          <a href="#">SoundCloud</a>
+          <a href="#" target="_blank">YouTube</a>
+          <a href="#" target="_blank">SoundCloud</a>
         </div>
       </article>
 
     </div>
+    <!-- 👆 PART 2 ENDS HERE 👆 -->
+
   </div>
 </section>
+
 <!-- ======================================================
   PARTNER / AD BANNER (LIGHTWEIGHT FADE CONVEYOR)
   - Add / remove ads freely
