--- a/index.html
+++ b/index.html
@@ -417,6 +417,23 @@
     // click anywhere else closes
     document.addEventListener('click', () => resetGames());
   </script>
+<script>
+/* ======================================================
+   AD CONVEYOR — FADE ONLY (PERF SAFE)
+====================================================== */
+const ads = document.querySelectorAll('.ad-slide');
+let adIndex = 0;
+
+if (ads.length > 0) {
+  ads[0].classList.add('active');
+
+  setInterval(() => {
+    ads[adIndex].classList.remove('active');
+    adIndex = (adIndex + 1) % ads.length;
+    ads[adIndex].classList.add('active');
+  }, 4500); // change timing here
+}
+</script>
 
 </body>
 </html>
