--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <div class="team-grid">
 
       <article class="team-member">
-        <img src="images/team/luvelre.jpg" alt="Luvelre N.">
+        <img src="images/team/gallery/gallery1.jpeg" alt="Luvelre N.">
         <h4>Luvelre N.</h4>
         <p class="team-role">Narrative Designer & Lead Scriptwriter</p>
 
@@ -250,7 +250,7 @@
       </article>
 
       <article class="team-member">
-        <img src="images/team/milo.jpg" alt="Milo G.">
+        <img src="images/team/gallery/gallery1.jpeg" alt="Milo G.">
         <h4>Milo G.</h4>
         <p class="team-role">Lead Visual Artist & Animation Director</p>
 
@@ -261,7 +261,7 @@
       </article>
 
       <article class="team-member">
-        <img src="images/team/kevin.jpg" alt="Kevin N.">
+        <img src="images/gallery/gallery1.jpeg" alt="Kevin N.">
         <h4>Kevin N.</h4>
         <p class="team-role">Lead Technical Designer & Full-Stack Developer</p>
 
@@ -272,7 +272,7 @@
       </article>
 
       <article class="team-member">
-        <img src="images/team/konne.jpg" alt="KonneAqua">
+        <img src="images/gallery/gallery1.jpeg" alt="KonneAqua">
         <h4>KonneAqua</h4>
         <p class="team-role">Audio Director & Lead Composer</p>
 
