--- a/index.html
+++ b/index.html
@@ -316,8 +316,10 @@
 
       <!-- AD ITEM 3 -->
       <div class="ad-slide">
-        <img src="images/gallery/gallery1.jpeg" alt="Partner Studio 3">
-      </div>
+      <img src="images/gallery/gallery1.jpeg"
+     alt="Partner Studio 1"
+     style="background:white; padding:10px;">
+
 
       <!-- 🔽 COPY THIS BLOCK TO ADD MORE ADS -->
       <!--
