--- a/index.html
+++ b/index.html
@@ -439,9 +439,8 @@ if (ads.length > 0) {
 <script>
 /* =========================================
    AD CONVEYOR — FADE ONLY (CPU SAFE)
-   No transform, no translate, no GPU stress
 ========================================= */
-(function () {
+window.addEventListener('DOMContentLoaded', () => {
   const slides = document.querySelectorAll('.ad-slide');
   let current = 0;
 
@@ -451,9 +450,10 @@ if (ads.length > 0) {
     slides[current].classList.remove('active');
     current = (current + 1) % slides.length;
     slides[current].classList.add('active');
-  }, 3500); // change speed here (ms)
-})();
+  }, 3500);
+});
 </script>
+
 
 </body>
 </html>
