--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
   <!-- AD ITEM 2 -->
   <div class="ad-slide">
-    <img src="images/gallery/gallery1.jpeg" alt="Partner Studio 2">
+    <img src="images/gallery/gallery1.jpeg">
   </div>
 
   <!-- AD ITEM 3 -->
