--- a/index.html
+++ b/index.html
@@ -261,8 +261,10 @@
       </article>
 
       <article class="team-member">
-        <img src="images/gallery/gallery1.jpeg" alt="Kevin N.">
-        <h4>Kevin N.</h4>
+       <img src="images/gallery/gallery1.jpeg"
+     alt="Kevin N."
+     style="border-radius:0; width:200px; height:auto;">
+
         <p class="team-role">Lead Technical Designer & Full-Stack Developer</p>
 
         <div class="team-links">
