--- a/index.html
+++ b/index.html
@@ -261,11 +261,10 @@
       </article>
 
       <article class="team-member">
-       <img src="images/gallery/gallery1.jpeg"
-     alt="Kevin N."
-     style="border-radius:0; width:200px; height:auto;">
-
-        <p class="team-role">Lead Technical Designer & Full-Stack Developer</p>
+       <article class="team-member">
+        <img src="images/team/gallery/gallery1.jpeg" alt="Milo G.">
+        <h4>Kevin N.</h4>
+        <p class="team-role">Lead Technical Designer & Developer</p>
 
         <div class="team-links">
           <a href="https://github.com/USERNAME" target="_blank">GitHub</a>
