--- a/index.html
+++ b/index.html
@@ -459,6 +459,16 @@ window.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
+<script>
+const slides = document.querySelectorAll('.ad-slide');
+let i = 0;
+
+setInterval(() => {
+  slides[i].classList.remove('active');
+  i = (i + 1) % slides.length;
+  slides[i].classList.add('active');
+}, 4000);
+</script>
 
 </body>
 </html>
