--- a/index.html
+++ b/index.html
@@ -260,9 +260,8 @@
         </div>
       </article>
 
-      <article class="team-member">
        <article class="team-member">
-        <img src="images/team/gallery/gallery1.jpeg" alt="Milo G.">
+        <img src="images/team/gallery/gallery1.jpeg" alt="Kevin N.">
         <h4>Kevin N.</h4>
         <p class="team-role">Lead Technical Designer & Developer</p>
 
