--- a/index.html
+++ b/index.html
@@ -469,5 +469,18 @@ setInterval(() => {
 }, 4000);
 </script>
 
+<script>
+  const slides = document.querySelectorAll('.ad-slide');
+  let index = 0;
+
+  if (slides.length > 1) {
+    setInterval(() => {
+      slides[index].classList.remove('active');
+      index = (index + 1) % slides.length;
+      slides[index].classList.add('active');
+    }, 3500);
+  }
+</script>
+
 </body>
 </html>
