--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
   <!-- AD ITEM 1 -->
   <div class="ad-slide active">
     <img src="images/gallery/gallery1.jpg" alt="Partner Studio 1">
-  </div>
+  <div>
 
   <!-- AD ITEM 2 -->
   <div class="ad-slide">
@@ -319,9 +319,9 @@
     <img src="images/gallery/gallery1.jpg"
          alt="Partner Studio 3"
          style="background:white; padding:10px;">
-  </div>
+  <div>
 
-</div>
+<div>
 
 
 
