--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <div class="team-grid">
 
       <article class="team-member">
-        <img src="images/gallery/gallery1.jpg" alt="Luvelre N.">
+        <img src="images/Luvelre.jpg" alt="Luvelre N.">
         <h4>Luvelre N.</h4>
         <p class="team-role">Narrative Designer & Lead Scriptwriter</p>
 
@@ -261,18 +261,18 @@
       </article>
 
        <article class="team-member">
-        <img src="images/gallery/gallery1.jpg" alt="Kevin N.">
+        <img src="images/Kevin.jpg" alt="Kevin N.">
         <h4>Kevin N.</h4>
-        <p class="team-role">Lead Technical Designer & Developer</p>
+        <p class="team-role">Lead Designer & Developer</p>
 
         <div class="team-links">
-          <a href="https://github.com/USERNAME" target="_blank">GitHub</a>
+          <a href="https://instagram.com/koen_yulln" target="_blank">Instagram</a>
           <a href="https://linkedin.com/in/USERNAME" target="_blank">LinkedIn</a>
         </div>
       </article>
 
       <article class="team-member">
-        <img src="images/gallery/gallery1.jpg" alt="KonneAqua">
+        <img src="images/konne.jpg" alt="KonneAqua">
         <h4>KonneAqua</h4>
         <p class="team-role">Audio Director & Lead Composer</p>
 
