Update image source for Project A in index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <!-- ========= PROJECT A ========= -->
         <article class="game-card" data-game="game-a" tabindex="0" role="button" aria-label="Open Project A info">
-          <img src="images/gallery/gallery1.jpg" alt="Project A key art">
+          <img src="images/Area 1.png" alt="Project A key art">
           <div class="game-overlay">
             <h3>Project A</h3>
             <p>In Development</p>
