--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
         <div class="team-links">
           <a href="https://instagram.com/koen_yulln" target="_blank">Instagram</a>
-          <a href="https://linkedin.com/in/USERNAME" target="_blank">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/kevin-neptuno-5aa6a3383/" target="_blank">LinkedIn</a>
         </div>
       </article>
 
