Update Project A title to 'Candle Letters'

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <article class="game-card" data-game="game-a" tabindex="0" role="button" aria-label="Open Project A info">
           <img src="images/Area 1.png" alt="Project A key art">
           <div class="game-overlay">
-            <h3>Project A</h3>
+            <h3>Candle Letters</h3>
             <p>In Development</p>
             <span class="pill">View Game Info</span>
           </div>
